WASP link opens in new tab

--- a/website-frontend/client/index.html
+++ b/website-frontend/client/index.html
@@ -39,7 +39,7 @@
     <div class = "container homepage"  id="homepage">
         <div class="row align-items-start central" style = "margin: 15%; padding-top: 7.5%;">
             <div class="col" id="informationBox">
-                <p> Built upon data from <a href="https://www.windrushwasp.org/" style="color: rgb(127,201,202)">WASP</a>, a registered charity built upon improving river quality and safety by
+                <p> Built upon data from <a href="https://www.windrushwasp.org/" target="_blank"style="color: rgb(127,201,202)">WASP</a>, a registered charity built upon improving river quality and safety by
                 monitoring and denouncing illegal sewage dumping, SewAnalyst can be used to generate reports on the validity of these three things: <br>
                 <b>1. Population Equivalent (PE) <br> <!-- Maybe make this a li?-->
                 2. Dry Weather Flow (DWF) <br>
